--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -37,7 +37,6 @@
 		<PackageReference Include="QRCoder.Xaml" Version="1.6.0" />
 		<PackageReference Include="ScottPlot.WPF" Version="5.0.54" />
 		<PackageReference Include="System.IO.Ports" Version="9.0.2" />
-		<PackageReference Include="System.Management" Version="9.0.3" />
 		<PackageReference Include="System.ServiceProcess.ServiceController" Version="9.0.2" />
 		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
@@ -82,6 +81,7 @@
     <None Remove="Assets\png\PowerToy.png" />
     <None Remove="Assets\Sounds\error.wav" />
     <None Remove="Assets\Sounds\success.wav" />
+    <None Remove="ToolPlugins\UsbTreeView.exe" />
   </ItemGroup>
 
   <ItemGroup>
@@ -304,6 +304,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Tool\static\media\jsoneditor-icons.15f2789d.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Tool\UsbTreeView.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Properties\Settings.settings">
