--- a/Projects/ProjectBlackMura/ProjectBlackMura.csproj
+++ b/Projects/ProjectBlackMura/ProjectBlackMura.csproj
@@ -6,12 +6,25 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.0.1</VersionPrefix>
+		<VersionPrefix>1.0.0.2</VersionPrefix>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="CHANGELOG.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="README.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
 	  <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Assets\" />
 	</ItemGroup>
 	
 	
