--- a/UI/ColorVision.UI/ColorVision.UI.csproj
+++ b/UI/ColorVision.UI/ColorVision.UI.csproj
@@ -20,6 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AvalonEdit" Version="6.3.0.90" />
 		<PackageReference Include="log4net" Version="3.0.4" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
