--- a/Engine/cvColorVision/cvColorVision.csproj
+++ b/Engine/cvColorVision/cvColorVision.csproj
@@ -15,55 +15,55 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <None Include="..\..\DLL\scgd_internal_dll\cudart64_12.dll" Link="libs\cudart64_12.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\cudart64_12.dll" Link="runtimes\win-x64\native\cudart64_12.dll">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Include="..\..\DLL\scgd_internal_dll\cvCamera.dll" Link="libs\cvCamera.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\cvCamera.dll" Link="runtimes\win-x64\native\cvCamera.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Include="..\..\DLL\scgd_internal_dll\cvoled.dll" Link="libs\cvoled.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\cvoled.dll" Link="runtimes\win-x64\native\cvoled.dll">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Include="..\..\DLL\scgd_internal_dll\qhyccd.dll" Link="libs\qhyccd.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\qhyccd.dll" Link="runtimes\win-x64\native\qhyccd.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <Content Include="..\..\DLL\scgd_internal_dll\SCBase.dll" Link="libs\SCBase.dll">
+	  <Content Include="..\..\DLL\scgd_internal_dll\SCBase.dll" Link="runtimes\win-x64\native\SCBase.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
-	  <None Include="..\..\DLL\scgd_internal_dll\SCGDCamLayer.dll" Link="libs\SCGDCamLayer.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\SCGDCamLayer.dll" Link="runtimes\win-x64\native\SCGDCamLayer.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <Content Include="..\..\DLL\scgd_internal_dll\SCGDDataProcess.dll" Link="libs\SCGDDataProcess.dll">
+	  <Content Include="..\..\DLL\scgd_internal_dll\SCGDDataProcess.dll" Link="runtimes\win-x64\native\SCGDDataProcess.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="..\..\DLL\scgd_internal_dll\SCGDMilCam.dll" Link="libs\SCGDMilCam.dll">
+    <None Include="..\..\DLL\scgd_internal_dll\SCGDMilCam.dll" Link="runtimes\win-x64\native\SCGDMilCam.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-	  <None Include="..\..\DLL\scgd_internal_dll\CommLibrary.dll" Link="libs\CommLibrary.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\CommLibrary.dll" Link="runtimes\win-x64\native\CommLibrary.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Include="..\..\DLL\scgd_internal_dll\opencv_world401.dll" Link="libs\opencv_world401.dll">
+	  <None Include="..\..\DLL\scgd_internal_dll\opencv_world401.dll" Link="runtimes\win-x64\native\opencv_world401.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <Content Include="..\..\DLL\scgd_internal_dll\pthreadVC2.dll" Link="libs\pthreadVC2.dll">
+	  <Content Include="..\..\DLL\scgd_internal_dll\pthreadVC2.dll" Link="runtimes\win-x64\native\pthreadVC2.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
-	  <Content Include="..\..\DLL\scgd_internal_dll\sqlite3.dll" Link="libs\sqlite3.dll">
+	  <Content Include="..\..\DLL\scgd_internal_dll\sqlite3.dll" Link="runtimes\win-x64\native\sqlite3.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\DLL\scgd_internal_dll\cvCalibration.dll" Link="libs\cvCalibration.dll">
+    <None Include="..\..\DLL\scgd_internal_dll\cvCalibration.dll" Link="runtimes\win-x64\native\cvCalibration.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\DLL\scgd_internal_dll\cvTableList.dll" Link="libs\cvTableList.dll">
+    <None Include="..\..\DLL\scgd_internal_dll\cvTableList.dll" Link="runtimes\win-x64\native\cvTableList.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\DLL\scgd_internal_dll\msvcr100.dll" Link="libs\msvcr100.dll">
+    <None Include="..\..\DLL\scgd_internal_dll\msvcr100.dll" Link="runtimes\win-x64\native\msvcr100.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\DLL\scgd_internal_dll\toupcam.dll" Link="libs\toupcam.dll">
+    <None Include="..\..\DLL\scgd_internal_dll\toupcam.dll" Link="runtimes\win-x64\native\toupcam.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
