--- a/Projects/CV_Spectrometer/CV_Spectrometer.csproj
+++ b/Projects/CV_Spectrometer/CV_Spectrometer.csproj
@@ -8,7 +8,12 @@
     <Platforms>AnyCPU;x64</Platforms>
     <Company>Spectromer</Company>
     <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <VersionPrefix>1.0.0.2</VersionPrefix>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Assets\Image\CIE-1931.jpg" />
+  </ItemGroup>
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
@@ -21,6 +26,12 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Engine\cvColorVision\cvColorVision.csproj" />
 	  <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Resource Include="Assets\Image\CIE-1931.jpg">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Resource>
 	</ItemGroup>
 
   <ItemGroup>
@@ -44,9 +55,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Assets\Image\CIE-1931.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="Assets\Image\CIE-1976.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -61,5 +69,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+	
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制文件到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;" />
+  </Target>
 
 </Project>
