--- a/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
+++ b/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
@@ -66,6 +66,7 @@
 		<None Remove="Assets\Image\CIE1931xy.ico" />
 		<None Remove="Assets\Image\CIE1931xy.png" />
 		<None Remove="Assets\Image\CIE1931xy1.png" />
+		<None Remove="Assets\Image\CIE_1976_UCS.png" />
 		<None Remove="Assets\Image\ColorVision.ico" />
 		<None Remove="Assets\Image\ColorVision.png" />
 		<None Remove="Assets\Image\ColorVision1.ico" />
@@ -138,6 +139,7 @@
 		<Resource Include="Assets\Image\CIE1931xy.ico" />
 		<Resource Include="Assets\Image\CIE1931xy.png" />
 		<Resource Include="Assets\Image\CIE1931xy1.png" />
+		<Resource Include="Assets\Image\CIE_1976_UCS.png" />
 		<Resource Include="Assets\Image\ColorVision.ico" />
 		<Resource Include="Assets\Image\ColorVision.png" />
 		<Resource Include="Assets\Image\ColorVision1.ico" />
