--- a/Projects/ProjectBlackMura/ProjectBlackMura.csproj
+++ b/Projects/ProjectBlackMura/ProjectBlackMura.csproj
@@ -10,33 +10,36 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="CHANGELOG.md">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="README.md">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </EmbeddedResource>
+		<EmbeddedResource Include="CHANGELOG.md">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<EmbeddedResource Include="README.md">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
-	  <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
+		<ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
+		<ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Assets\" />
-	  <Folder Include="Config\" />
+		<Folder Include="Assets\" />
+		<Folder Include="Config\" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Reference Include="FlowEngineLib">
-	    <HintPath>..\..\DLL\FlowEngineLib.dll</HintPath>
-	  </Reference>
-	  <Reference Include="ST.Library.UI">
-	    <HintPath>..\..\DLL\ST.Library.UI.dll</HintPath>
-	  </Reference>
+		<Reference Include="FlowEngineLib">
+			<HintPath>..\..\DLL\FlowEngineLib.dll</HintPath>
+		</Reference>
+		<Reference Include="ST.Library.UI">
+			<HintPath>..\..\DLL\ST.Library.UI.dll</HintPath>
+		</Reference>
 	</ItemGroup>
-	
-	
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command=":: 定义变量&#xD;&#xA;set DebugPluginsDir=$(SolutionDir)ColorVision\bin\x64\Debug\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;set ReleasePluginsDir=$(SolutionDir)ColorVision\bin\x64\Release\net8.0-windows\Plugins\$(TargetName)&#xD;&#xA;&#xD;&#xA;:: 创建目录（如果不存在）&#xD;&#xA;if not exist &quot;%25DebugPluginsDir%25&quot; (mkdir &quot;%25DebugPluginsDir%25&quot;)&#xD;&#xA;if not exist &quot;%25ReleasePluginsDir%25&quot; (mkdir &quot;%25ReleasePluginsDir%25&quot;)&#xD;&#xA;&#xD;&#xA;:: 复制文件到目标目录&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25DebugPluginsDir%25&quot;&#xD;&#xA;copy &quot;$(OutDir)$(TargetName)$(TargetExt)&quot; &quot;%25ReleasePluginsDir%25&quot;" />
+	</Target>
+
 
 </Project>
