--- a/Core/opencv_cuda/opencv_cuda.vcxproj
+++ b/Core/opencv_cuda/opencv_cuda.vcxproj
@@ -166,8 +166,8 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\cuda_export.h" />
-    <ClInclude Include="..\include\custom_structs.h" />
+    <ClInclude Include="..\..\include\cuda_export.h" />
+    <ClInclude Include="..\..\include\custom_structs.h" />
     <ClInclude Include="cudamath.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Fusion.h" />
