--- a/Core/opencv_helper/opencv_helper.vcxproj.filters
+++ b/Core/opencv_helper/opencv_helper.vcxproj.filters
@@ -33,23 +33,23 @@
     <ClInclude Include="resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\custom_structs.h">
+    <ClInclude Include="..\..\include\algorithm.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\opencv_export.h">
+    <ClInclude Include="..\..\include\common.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\common.h">
+    <ClInclude Include="..\..\include\custom_file.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\opencv_media_export.h">
+    <ClInclude Include="..\..\include\custom_structs.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\custom_file.h">
-      <Filter>自定义文件</Filter>
+    <ClInclude Include="..\..\include\opencv_export.h">
+      <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\algorithm.h">
-      <Filter>算法</Filter>
+    <ClInclude Include="..\..\include\opencv_media_export.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
