--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -343,6 +343,7 @@
     <Folder Include="Rbac\Tenants\" />
     <Folder Include="Rbac\Account\" />
     <Folder Include="Services\Devices\Spectrum\Templates\" />
+    <Folder Include="Templates\Jsons\LargeFlow\" />
   </ItemGroup>
 
 </Project>
