--- a/Plugins/ColorVisonChat/ColorVisonChat.csproj
+++ b/Plugins/ColorVisonChat/ColorVisonChat.csproj
@@ -5,7 +5,7 @@
 	  <Nullable>enable</Nullable>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <UseWPF>true</UseWPF>
-	  <VersionPrefix>1.2.0.1</VersionPrefix>
+	  <VersionPrefix>1.2.0.2</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
