--- a/Plugins/SystemMonitor/SystemMonitor.csproj
+++ b/Plugins/SystemMonitor/SystemMonitor.csproj
@@ -49,6 +49,9 @@
 	  <None Update="manifest.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="README.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
