--- a/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
+++ b/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
@@ -35,6 +35,9 @@
 	  <None Update="manifest.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="README.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
