--- a/UI/ColorVision.Scheduler/ColorVision.Scheduler.csproj
+++ b/UI/ColorVision.Scheduler/ColorVision.Scheduler.csproj
@@ -18,7 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
+	  <ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
+	  <ProjectReference Include="..\ColorVision.Themes\ColorVision.Themes.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
