--- a/Engine/ColorVision.Net/ColorVision.Net.csproj
+++ b/Engine/ColorVision.Net/ColorVision.Net.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+	 <VersionPrefix>1.3.3.1</VersionPrefix>
+	  <SignAssembly>True</SignAssembly>
+	  <AssemblyOriginatorKeyFile>$(SolutionDir)ColorVision.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
